--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
     "@nextui-org/react": "^1.0.0-beta.10",
     "next": "12.2.5",
     "next-themes": "^0.2.0",
