--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "@nextui-org/react": "^1.0.0-beta.10",
+    "moment": "^2.29.4",
     "next": "12.2.5",
     "next-themes": "^0.2.0",
     "react": "18.2.0",
