--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/components/*": ["components/*"]
-      //   "@/config/*": ["config/*"],
+      "@/components/*": ["components/*"],
+      "@/config/*": ["config/*"]
       //   "@/styles/*": ["styles/*"]
     }
   }
