--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,8 +3,8 @@
     "baseUrl": ".",
     "paths": {
       "@/components/*": ["components/*"],
-      "@/config/*": ["config/*"]
-      //   "@/styles/*": ["styles/*"]
+      "@/config/*": ["config/*"],
+      "@/helpers/*": ["helpers/*"]
     }
   }
 }
