--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/react": "^1.0.0-beta.10",
     "axios": "^0.27.2",
     "cookie": "^0.5.0",
+    "framer-motion": "^7.2.1",
     "moment": "^2.29.4",
     "next": "12.2.5",
     "next-themes": "^0.2.0",
