--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-onesignal": "^2.0.4",
     "react-toastify": "^9.0.8"
   },
   "devDependencies": {
